--- a/package.json
+++ b/package.json
@@ -11,15 +11,23 @@
     "db:push": "prisma db push",
     "db:migrate": "prisma migrate dev",
     "db:studio": "prisma studio",
-    "db:seed": "tsx prisma/seed.ts"
+    "db:seed": "tsx prisma/seed.ts",
+    "db:check": "tsx scripts/check-db.ts",
+    "db:create-schema": "tsx scripts/create-schema.ts",
+    "supabase:check": "tsx scripts/check-supabase.ts",
+    "env:check": "tsx scripts/check-env.ts",
+    "check:all": "npm run env:check && npm run db:check && npm run supabase:check"
   },
   "dependencies": {
+    "@prisma/adapter-pg": "^7.0.1",
     "@prisma/client": "^7.0.1",
     "@supabase/supabase-js": "^2.86.0",
+    "@types/pg": "^8.15.6",
     "bcryptjs": "^3.0.3",
     "jsonwebtoken": "^9.0.2",
     "next": "16.0.6",
     "openai": "^6.9.1",
+    "pg": "^8.16.3",
     "prisma": "^7.0.1",
     "react": "19.2.0",
     "react-dom": "19.2.0",
