--- a/package.json
+++ b/package.json
@@ -12,8 +12,17 @@
     "db:migrate": "prisma migrate dev",
     "db:studio": "prisma studio",
     "db:seed": "tsx prisma/seed.ts",
+    "db:seed-curriculum": "tsx scripts/seed-curriculum.ts",
+    "db:seed-curriculum-table": "tsx scripts/seed-curriculum-table.ts",
+    "db:seed-exercises": "tsx scripts/seed-exercises-from-fixtures.ts",
+    "db:get-grade7-easy": "tsx scripts/get-grade7-easy-exercises.ts",
+    "db:get-grade7-math-easy": "tsx scripts/get-grade7-math-easy.ts",
+    "db:get-grade7-math-curriculum": "tsx scripts/get-grade7-math-curriculum.ts",
+    "db:get-subject-curriculum": "tsx scripts/get-subject-curriculum.ts",
+    "db:clear": "tsx scripts/clear-database.ts",
     "db:check": "tsx scripts/check-db.ts",
     "db:create-schema": "tsx scripts/create-schema.ts",
+    "db:create-nhahan": "tsx scripts/create-user-nhahan.ts",
     "supabase:check": "tsx scripts/check-supabase.ts",
     "env:check": "tsx scripts/check-env.ts",
     "check:all": "npm run env:check && npm run db:check && npm run supabase:check"
@@ -21,17 +30,27 @@
   "dependencies": {
     "@prisma/adapter-pg": "^7.0.1",
     "@prisma/client": "^7.0.1",
+    "@radix-ui/react-toast": "^1.2.15",
     "@supabase/supabase-js": "^2.86.0",
     "@types/pg": "^8.15.6",
     "bcryptjs": "^3.0.3",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "jose": "^6.1.3",
     "jsonwebtoken": "^9.0.2",
+    "katex": "^0.16.25",
+    "lucide-react": "^0.555.0",
     "next": "16.0.6",
+    "next-themes": "^0.4.6",
     "openai": "^6.9.1",
     "pg": "^8.16.3",
     "prisma": "^7.0.1",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "react-katex": "^3.1.0",
     "resend": "^6.5.2",
+    "sonner": "^2.0.7",
+    "tailwind-merge": "^3.4.0",
     "zod": "^4.1.13"
   },
   "devDependencies": {
@@ -41,6 +60,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "dotenv": "^17.2.3",
     "eslint": "^9",
     "eslint-config-next": "16.0.6",
     "tailwindcss": "^4",
